--- a/ArticleTemplates/assets/scss/layout/_article--sponsorship.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--sponsorship.scss
@@ -346,7 +346,7 @@
         }
 
         .audio-player__button.touchpoint--primary .touchpoint__button,
-        .audio-player__slider__knob{
+        .audio-player__handle {
             background-color: color(global-adv-bands);
 
             &:active {
