--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -804,6 +804,23 @@
   </div>
   ```
   */
+  /* Functional styling;
+   * These styles are required for noUiSlider to function.
+   * You don't need to change these rules to apply your design.
+   */
+  /* Painting and performance;
+   * Browsers can paint handles in their own layer.
+   */
+  /* Slider size and handle placement;
+   */
+  /* Styling;
+   */
+  /* Handles and cursors;
+   */
+  /* Handle stripes;
+   */
+  /* Disabled state;
+   */
   /*doc
   ---
   title: Gallery
@@ -4106,78 +4123,130 @@
     height: 68px;
     width: 100%;
     z-index: 1; }
-  #sandbox .audio-player__button {
-    position: absolute;
-    top: 12px;
-    left: 12px; }
-    #sandbox .audio-player__button.touchpoint--primary .touchpoint__button {
-      color: #333;
-      background-color: #fb0; }
-      #sandbox .audio-player__button.touchpoint--primary .touchpoint__button:active {
-        background-color: #ffd35c; }
-  #sandbox .audio-player__button--loading {
-    position: absolute;
-    top: 12px;
-    left: 12px;
-    width: 44px;
-    height: 44px;
-    background-color: white;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 29px;
-    border-bottom-right-radius: 29px;
-    border: 2px solid #fff;
-    display: none; }
-  #sandbox .audio-player__slider {
-    outline: 0;
-    height: 100%;
-    width: 100%;
-    position: relative;
+    #sandbox .audio-player__button {
+      position: absolute;
+      top: 12px;
+      left: 12px; }
+      #sandbox .audio-player__button.touchpoint--primary .touchpoint__button {
+        color: #333;
+        background-color: #fb0; }
+        #sandbox .audio-player__button.touchpoint--primary .touchpoint__button:active {
+          background-color: #ffd35c; }
+    #sandbox .audio-player__button--loading {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      width: 44px;
+      height: 44px;
+      background-color: white;
+      border-top-right-radius: 30px;
+      border-top-left-radius: 30px;
+      border-bottom-left-radius: 29px;
+      border-bottom-right-radius: 29px;
+      border: 2px solid #fff;
+      display: none; }
+    #sandbox .audio-player__slider-wrapper:before {
+      position: absolute;
+      height: 2px;
+      left: 0;
+      right: 0;
+      bottom: 7px;
+      content: "";
+      background-color: #999; }
+    #sandbox .audio-player__slider {
+      outline: 0;
+      height: 100%;
+      width: 100%;
+      position: relative;
+      -webkit-user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-text-size-adjust: none;
+      -webkit-touch-callout: none; }
+    #sandbox .audio-player__played, #sandbox .audio-player__remaining {
+      display: inline-block;
+      width: 49%;
+      padding: 0 0 8px;
+      margin: 0;
+      color: #fff;
+      opacity: 1;
+      font-family: "Guardian Agate Sans 1 Web", sans-serif;
+      font-weight: normal;
+      background: transparent;
+      border: 0; }
+      @media all and (max-width: 40.62em) {
+        #sandbox .audio-player__played, #sandbox .audio-player__remaining {
+          font-size: 1.4rem;
+          line-height: 2rem; } }
+      @media all and (min-width: 40.63em) {
+        #sandbox .audio-player__played, #sandbox .audio-player__remaining {
+          font-size: 1.6rem;
+          line-height: 2.2rem; } }
+    #sandbox .audio-player__remaining {
+      text-align: right;
+      right: 0; }
+    #sandbox .audio-player__handle {
+      position: relative;
+      z-index: 1;
+      border-radius: 50%;
+      background-color: #ffd35c;
+      cursor: default; }
+  #sandbox .noUi-target,
+  #sandbox .noUi-target * {
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-text-size-adjust: none;
-    -webkit-touch-callout: none; }
-  #sandbox .audio-player__slider__played,
-  #sandbox .audio-player__slider__remaining {
-    color: #fff;
-    opacity: 1;
-    font-family: "Guardian Agate Sans 1 Web", sans-serif;
-    font-weight: normal;
-    background: transparent;
-    position: absolute;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    margin-top: -3px; }
-    @media all and (max-width: 40.62em) {
-      #sandbox .audio-player__slider__played,
-      #sandbox .audio-player__slider__remaining {
-        font-size: 1.4rem;
-        line-height: 2rem; } }
-    @media all and (min-width: 40.63em) {
-      #sandbox .audio-player__slider__played,
-      #sandbox .audio-player__slider__remaining {
-        font-size: 1.6rem;
-        line-height: 2.2rem; } }
-  #sandbox .audio-player__slider__remaining {
-    text-align: right;
-    right: 0; }
-  #sandbox .audio-player__slider__track {
-    background-color: #999;
-    height: 2px;
+    -ms-touch-action: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+  #sandbox .noUi-target {
+    position: relative;
+    direction: ltr; }
+  #sandbox .noUi-base {
     width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+    /* Fix 401 */ }
+  #sandbox .noUi-origin {
     position: absolute;
-    top: calc(50% + 9px);
     right: 0;
-    left: 0; }
-  #sandbox .audio-player__slider__knob {
-    background-color: #ffd35c;
-    margin-top: 24px;
-    border-radius: 50%;
-    padding: 0;
-    height: 16px;
+    top: 0;
+    left: 0;
+    bottom: 0; }
+  #sandbox .noUi-stacking .audio-player__handle {
+    /* This class is applied to the lower origin when
+       its values is > 50%. */
+    z-index: 10; }
+  #sandbox .noUi-state-tap .noUi-origin {
+    -webkit-transition: left 0.3s, top 0.3s;
+    transition: left 0.3s, top 0.3s; }
+  #sandbox .noUi-state-drag * {
+    cursor: inherit !important; }
+  #sandbox .noUi-base {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  #sandbox .noUi-horizontal {
+    height: 16px; }
+  #sandbox .noUi-horizontal .audio-player__handle {
     width: 16px;
-    position: absolute; }
+    height: 16px;
+    left: -8px;
+    top: 0; }
+  #sandbox .noUi-background {
+    background: transparent;
+    width: calc(100% - 16px);
+    left: 8px; }
+  #sandbox .noUi-dragable {
+    cursor: w-resize; }
+  #sandbox .noUi-vertical .noUi-dragable {
+    cursor: n-resize; }
+  #sandbox [disabled].noUi-connect,
+  #sandbox [disabled] .noUi-connect {
+    background: #B8B8B8; }
+  #sandbox [disabled].noUi-origin,
+  #sandbox [disabled] .audio-player__handle {
+    cursor: not-allowed; }
   #sandbox .gallery {
     padding: 12px 12px 0px 12px; }
     @media all and (max-width: 28.12em) {
@@ -4806,10 +4875,10 @@
   #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player {
     background-color: #636363; }
   #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__button.touchpoint--primary .touchpoint__button,
-  #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__slider__knob {
+  #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__handle {
     background-color: #878787; }
     #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__button.touchpoint--primary .touchpoint__button:active,
-    #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__slider__knob:active {
+    #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__handle:active {
       background-color: #6e6e6e; }
   #sandbox .is_advertising:not(.tone--review):not(.tone--analysis).tone--podcast .audio-player__slider__track {
     background-color: #cbc9c5; }
@@ -5311,7 +5380,7 @@
     #sandbox .tone--podcast .audio-player__button.touchpoint--primary .touchpoint__button:active {
       background-color: #4bc6df;
       /* NB Need new colour???!!! */ }
-  #sandbox .tone--podcast .audio-player__slider__knob {
+  #sandbox .tone--podcast .audio-player__handle {
     background-color: #a7d8f2; }
   #sandbox .tone--podcast .article {
     border-top-color: #a7d8f2; }
@@ -5335,7 +5404,6 @@
         color: #333;
         display: block; }
     #sandbox .tone--podcast .article__header .card__titletext {
-      margin-bottom: 4px;
       text-overflow: ellipsis;
       overflow-y: hidden;
       word-wrap: break-word;
