AND-10342: Initial work fixing upscaled svg in football stats

--- a/ArticleTemplates/assets/css/style-async.css
+++ b/ArticleTemplates/assets/css/style-async.css
@@ -2982,71 +2982,57 @@ Display comparison of possession, goal attempts, corners and fouls that occurred
 */
 .match-stats {
   font-family: "Guardian Agate Sans 1 Web", sans-serif; }
-  .match-stats .bar-chart,
-  .match-stats .match-stats__shots span {
+  .match-stats .bar-chart, .match-stats__shots span {
     font-family: "Guardian Egyptian Web", Georgia, serif;
     font-weight: 600;
     margin: 0px 0px 12px 0px;
     display: block; }
     @media all and (max-width: 40.62em) {
-      .match-stats .bar-chart,
-      .match-stats .match-stats__shots span {
+      .match-stats .bar-chart, .match-stats__shots span {
         font-size: 1.7rem;
         line-height: 2.2rem; } }
     @media all and (min-width: 40.63em) {
-      .match-stats .bar-chart,
-      .match-stats .match-stats__shots span {
+      .match-stats .bar-chart, .match-stats__shots span {
         font-size: 2.2rem;
         line-height: 3rem; } }
-
-.match-stats__caption {
-  color: #333;
-  margin: 0px 0px 3px 0px; }
-  @media all and (max-width: 40.62em) {
-    .match-stats__caption {
-      font-size: 1.4rem;
-      line-height: 2rem; } }
-  @media all and (min-width: 40.63em) {
-    .match-stats__caption {
-      font-size: 1.6rem;
-      line-height: 2.2rem; } }
-
-.match-stats__shots {
-  margin: 0px 0px 12px 0px;
-  overflow: hidden; }
-
-.match-stats__shots__off,
-.match-stats__shots__on {
-  padding: 3px 6px; }
-  @media all and (max-width: 40.62em) {
-    .match-stats__shots__off,
-    .match-stats__shots__on {
-      font-size: 1.4rem;
-      line-height: 2rem; } }
-  @media all and (min-width: 40.63em) {
-    .match-stats__shots__off,
-    .match-stats__shots__on {
-      font-size: 1.6rem;
-      line-height: 2.2rem; } }
-
-.match-stats__shots__on {
-  width: 75%;
-  border: 2px solid #fff;
-  border-bottom: 0; }
-
-.match-stats__shots--home,
-.match-stats__shots--away {
-  background-image: url("../img/hor-bg.png");
-  background-size: 8px;
-  width: 50%;
-  float: left; }
-
-.match-stats__shots--home .match-stats__shots__on {
-  float: right;
-  border-right: 0; }
-
-.match-stats__shots--away .match-stats__shots__on {
-  border-left: 0; }
+  .match-stats__caption {
+    color: #333;
+    margin: 0px 0px 3px 0px; }
+    @media all and (max-width: 40.62em) {
+      .match-stats__caption {
+        font-size: 1.4rem;
+        line-height: 2rem; } }
+    @media all and (min-width: 40.63em) {
+      .match-stats__caption {
+        font-size: 1.6rem;
+        line-height: 2.2rem; } }
+  .match-stats__shots {
+    margin: 0px 0px 12px 0px;
+    overflow: hidden; }
+  .match-stats__shots__off, .match-stats__shots__on {
+    padding: 3px 6px; }
+    @media all and (max-width: 40.62em) {
+      .match-stats__shots__off, .match-stats__shots__on {
+        font-size: 1.4rem;
+        line-height: 2rem; } }
+    @media all and (min-width: 40.63em) {
+      .match-stats__shots__off, .match-stats__shots__on {
+        font-size: 1.6rem;
+        line-height: 2.2rem; } }
+  .match-stats__shots__on {
+    width: 75%;
+    border: 2px solid #fff;
+    border-bottom: 0; }
+  .match-stats__shots--home, .match-stats__shots--away {
+    background-image: url("../img/hor-bg.png");
+    background-size: 8px;
+    width: 50%;
+    float: left; }
+  .match-stats__shots--home .match-stats__shots__on {
+    float: right;
+    border-right: 0; }
+  .match-stats__shots--away .match-stats__shots__on {
+    border-left: 0; }
 
 /*doc
 ---
