--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -2537,7 +2537,8 @@
     font-family: "Guardian Agate Sans 1 Web", sans-serif;
     margin: 6px 12px;
     padding-right: 20px;
-    position: relative; }
+    position: relative;
+    z-index: 1; }
     @media all and (max-width: 40.62em) {
       #sandbox .container__outbrain .advert-slot__action {
         font-size: 1.4rem;
@@ -3455,14 +3456,14 @@
 @-webkit-keyframes fadeOutIn {
   7% {
     opacity: 1; }
-  93.0% {
+  93% {
     opacity: 1; }
   to {
     opacity: 0; } }
 @keyframes fadeOutIn {
   7% {
     opacity: 1; }
-  93.0% {
+  93% {
     opacity: 1; }
   to {
     opacity: 0; } }
