--- a/ArticleTemplates/assets/scss/modules/_advert-slot.scss
+++ b/ArticleTemplates/assets/scss/modules/_advert-slot.scss
@@ -79,6 +79,7 @@ MPU
         margin: base-px(.5, 1);
         padding-right: 20px;
         position: relative;
+        z-index: 1;
 
         span[data-icon] {
             font-size: 1.3em;
