DES-90 Heroic Template

--- a/ArticleTemplates/assets/scss/layout/_article--shared.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--shared.scss
@@ -2,7 +2,8 @@
 .article--comment,
 .article--feature,
 .article--audio,
-.article--immersive {
+.article--immersive,
+.article--heroic {
     .article__body {
         padding: base-px(1);
 
