--- a/ArticleTemplates/assets/scss/style-sync.scss
+++ b/ArticleTemplates/assets/scss/style-sync.scss
@@ -56,6 +56,7 @@
 @import 'tones/tone--deadblog';
 @import 'tones/tone--editorial';
 @import 'tones/tone--feature';
+@import 'tones/tone--heroic';
 @import 'tones/tone--live';
 @import 'tones/tone--media';
 @import 'tones/tone--news';
